# stellaris-stat-viewer

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  appveyor.yml
docs/: conf.py  contents.rst  index.rst  intro.rst
docs/techman/: building.rst  index.rst  structure.rst
docs/techman/classref/: parser.rst
docs/userman/: gettingstarted.rst  index.rst  install.rst  settings.rst  techtree.rst
src/: economy_view.cpp  economy_view.h  errormessage.cpp  errormessage.h  fleets_view.cpp  fleets_view.h  frontends.h.in  gametranslator.cpp  gametranslator.h  lexer.cpp  lexer.h  main.cpp  mainwindow.cpp  mainwindow.h  military_view.cpp  military_view.h  numerictableitem.cpp  numerictableitem.h  overview_view.cpp  overview_view.h  parser.cpp  parser.h  powerrating_view.cpp  powerrating_view.h  settingsdialog.cpp  settingsdialog.h  techs_view.cpp  techtreedialog.cpp  techtreedialog.h  win_json_main.cpp
src/core/: empire.cpp  empire.h  extract_gamestate.cpp  extract_gamestate.h  fleet.cpp  fleet.h  galaxy_model.cpp  galaxy_model.h  galaxy_state.cpp  galaxy_state.h  gametranslator.cpp  gametranslator.h  model_private_macros.h  parser.cpp  parser.h  ship.cpp  ship.h  ship_design.cpp  ship_design.h  ssv_core.h  starbase.cpp  starbase.h  system.cpp  system.h  technology.cpp  technology.h  techtree.cpp  techtree.h
src/core/puff/: puff.c  puff.h
src/frontends/json/: dataextraction.cpp  dataextraction.h  json_main.cpp
src/frontends/widgets/: gametranslator.cpp  mainwindow.cpp  mainwindow.h  numerictableitem.h  settingsdialog.cpp  settingsdialog.h  techtreedialog.cpp  techtreedialog.h  widgets_main.cpp
src/frontends/widgets/map/: galaxy_map_view.cpp  galaxy_map_view.h  jc_voronoi.h  voronoi.c
src/frontends/widgets/views/: economy_view.cpp  fleets_view.cpp  fleets_view.h  galaxy_map_view.cpp  galaxy_map_view.h  overview_view.cpp  research_view.cpp  research_view.h  strategic_resources_view.cpp  strategic_resources_view.h  techs_view.cpp
src/model/: empire.cpp  empire.h  fleet.cpp  fleet.h  galaxy_model.cpp  galaxy_model.h  galaxy_state.cpp  galaxy_state.h  model_private_macros.h  ship.cpp  ship.h  ship_design.cpp  ship_design.h  technology.cpp  technology.h
src/parser/: parser.cpp  parser.h
src/views/: economy_view.cpp  fleets_view.cpp  overview_view.cpp  techs_view.cpp  techs_view.h
tests/: test_parser.cpp
translations/: SSV_de.ts  translations.qrc
